Fix: Service Transactional 추가, DTO 변경
- Transactional 추가
- DTO 변경
- memberReport contoller,service repository 구현