@@ -1,22 +1,29 @@
 package com.WalkiePaw.domain.qna.service;
 
+import com.WalkiePaw.domain.member.Repository.MemberRepository;
+import com.WalkiePaw.domain.member.entity.Member;
 import com.WalkiePaw.domain.qna.repository.QnaRepository;
 import com.WalkiePaw.presentation.domain.qna.dto.QnaRequest;
 import com.WalkiePaw.presentation.domain.qna.dto.QnaResponse;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional
+@RequiredArgsConstructor
 public class QnaService {
 
-    private QnaRepository qnaRepository;
+    private final QnaRepository qnaRepository;
+    private final MemberRepository memberRepository;
 
     public List<QnaResponse> findAll() {
         return qnaRepository.findAll().stream()
                 .map(QnaResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public QnaResponse findById(Integer qnaId) {
@@ -24,7 +31,8 @@ public class QnaService {
     }
 
     public Integer save(QnaRequest request) {
-        return qnaRepository.save(request.toEntity());
+        Member member = memberRepository.findById(request.getMemberId());
+        return qnaRepository.save(request.toEntity(member));
     }
 
     public void update(Integer qnaId, QnaRequest request) {
